--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -50,6 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 STRIPE_KEY=
 STRIPE_SECRET=
