--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/cashier": "^13.10",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
