--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "cknow/laravel-money": "^6.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/cashier": "^13.10",
         "laravel/framework": "^9.11",
